# enigma2-dreambox

./: .gitignore  0.patch  193.patch  AUTHORS  README  README.md  chmod.sh  configure.ac  enigma2.bb
.github/workflows/: coverity-scan.yml  enigma2.yml  ovbot.yml  updatepot.yml
CI/: PEP8.sh  build.sh  futurize.sh  header.sh  pyskin.sh  skin.sh
data/: Makefile.am  convert-iso-639-3.py  keymap.xml  menu.xml  setup.xml  skin_display_dm8000.xml  startwizard.xml  unicable.xml
data/VirtualKeyBoard_Icons/: Makefile.am  vkskin.xml
data/countries/: Makefile.am
data/display/: Makefile.am  skin_display_dm900.xml  skin_display_dm920.xml  skin_display_dreamtwo.xml
data/display/7segment/: Makefile.am  skin_display.xml
data/display/display/: Makefile.am
data/display/display128/: skin_display.xml
data/display/display128dm/: Makefile.am  skin_display.xml  skin_display_picon.xml
data/display/display220/: Makefile.am  skin_display.xml  skin_display_picon.xml
data/display/display240/: skin_display.xml  skin_display_picon.xml
data/display/display390/: skin_display.xml  skin_display_picon.xml
data/display/display400/: Makefile.am  skin_display.xml  skin_display_picon.xml  skin_display_templates.xml
data/display/display480/: Makefile.am  skin_display.xml  skin_display_picon.xml  skin_display_templates.xml
data/display/display720/: Makefile.am  skin_display.xml  skin_display_picon.xml
data/display/display800/: Makefile.am  skin_display.xml  skin_display_picon.xml  skin_display_templates.xml
data/display/display800/Default_with_Picon_Fullscreen/: Makefile.am  skin_display.xml
data/display/display96/: Makefile.am  skin_display.xml
data/display/displaytext/: Makefile.am  skin_display.xml  skin_display_alternate.xml
data/display/grautec70x0/: Makefile.am  skin_display_grautec.xml
data/display/grautec70x0/fonts/: Makefile.am
data/display/grautec8000/: skin_display_grautec.xml
data/fonts/: Makefile.am
data/rc_models/: Makefile.am  dmm2.xml  rc_models.cfg
data/skin_default/: Makefile.am  skin.xml  skinTemplates.xml
doc/: AUTOMATICBUTTONS  BOXINFO
include/: hardwaredb.h  nanosvg.h
lib/actions/: action.cpp  parseactions.py
lib/base/: Makefile.inc  connection.h  estring.cpp  estring.h  esubtitlesettings.h  httpsstream.cpp  httpstream.cpp  internetcheck.cpp  io.h  message.h  sigc.h
lib/components/: Makefile.inc  audioplayback.h  decoder.h  tuxtxtapp.cpp
lib/driver/: Makefile.inc  alsa.h  avcontrol.cpp  avswitch.cpp  hdmi_cec.cpp  rc.h
lib/dvb/: Makefile.inc  alsa.h  db.cpp  db.h  decoder.cpp  decoder.h  decoders.h  demux.cpp  demux.h  dvb.cpp  dvb.h  dvbtime.cpp  (+33 more)
lib/python/Components/Converter/: AnalogClock.py  Audio.py  BhAnalogic.py  BhStreamInfo.py  Bitrate2.py  BoxInfo.py  CaidInfo2.py  ClientsStreaming.py  ClockToText.py  Combine.py  ConditionalShowHide.py  ConfigEntryTest.py  Converter.py  ConverterRotator.py  CpuUsage.py  CryptoInfo.py  EventName.py  EventName2.py  EventTime.py  ExtendedServiceInfo.py  ExtremeInfo.py  FrontendInfo.py  HbbtvApplicationInfo.py  HddState.py  LayoutInfo.py  Makefile.am  MenuEntryCompare.py  MovieBarInfo.py  MovieInfo.py  MovieReference.py  PliExtraInfo.py  Poll.py  ProgressDiskSpaceInfo.py  ProgressToText.py  RdsInfo.py  RefString.py  RemainingToText.py  RouteInfo.py  SensorToText.py  ServiceInfo.py  (+29 more)
lib/python/Components/Renderer/: AnalogClockLCD.py  AudioIcon.py  Bhclock.py  Canvas.py  ChannelNumber.py  CiModuleControl.py  Cover.py  EmptyEpg.py  FixedLabel.py  FrontpanelLed.py  FrontpanelLed2.py  GaugeRender.py  Label.py  LcdPicon.py  Listbox.py  Makefile.am  NextEpgInfo.py  NextEvents.py  Pager.py  PicCript.py  PicEmu2.py  Picon.py  PiconUni.py  Pig.py  Pixmap.py  PositionGauge.py  Progress.py  Renderer.py  RollerCharLCD.py  RollerCharLCDLong.py  RunningText.py  VRunningText.py  VWatches.py  VideoSize.py  VolumeText.py  VtiImageVersion.py
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/AmlFRQ/: plugin.py
lib/python/Plugins/SystemPlugins/CableScan/: plugin.py
lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/: plugin.py
lib/python/Plugins/SystemPlugins/DefaultServicesScanner/: plugin.py
lib/python/Plugins/SystemPlugins/DiseqcTester/: plugin.py
lib/python/Plugins/SystemPlugins/FSBLUpdater/: FSBLUpdater.py
lib/python/Plugins/SystemPlugins/FastChannelChange/: plugin.py
lib/python/Plugins/SystemPlugins/FastScan/: plugin.py
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py
lib/python/Plugins/SystemPlugins/Hotplug/: plugin.py
lib/python/Plugins/SystemPlugins/LCNScanner/: Makefile.am
lib/python/Plugins/SystemPlugins/NetworkWizard/: NetworkWizard.py  networkwizard.xml  plugin.py
lib/python/Plugins/SystemPlugins/OSD3DSetup/: plugin.py
lib/python/Plugins/SystemPlugins/OSDPositionSetup/: overscanwizard.py  plugin.py
lib/python/Plugins/SystemPlugins/PositionerSetup/: log.py  plugin.py  rotor_calc.py  ui.py
lib/python/Plugins/SystemPlugins/SatelliteEquipmentControl/: plugin.py
lib/python/Plugins/SystemPlugins/Satfinder/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: BackupRestore.py  ImageBackup.py  Makefile.am  SoftwareTools.py  plugin.py
lib/python/Plugins/SystemPlugins/TempFanControl/: plugin.py
lib/python/Plugins/SystemPlugins/VideoClippingSetup/: plugin.py
lib/python/Plugins/SystemPlugins/VideoEnhancement/: VideoEnhancement.py  plugin.py
lib/python/Plugins/SystemPlugins/VideoEnhancementAML/: VideoEnhancement.py  plugin.py
lib/python/Plugins/SystemPlugins/VideoTune/: VideoFinetune.py  plugin.py
lib/python/Plugins/SystemPlugins/Videomode/: Makefile.am  VideoHardware.py  VideoWizard.py  plugin.py  videowizard.xml
lib/python/Plugins/SystemPlugins/WirelessLan/: Wlan.py  plugin.py
m4/: ax_python_devel.m4
main/: bsod.cpp  enigma.cpp
po/: ar.po  cs.po  nl.po  ru.po  xml2po-python3.py  xml2po.py
tests/: enigma.py  events.py  fake_time.py  test_timer.py  tests.py
tools/: create_picon_e1_to_e2.py  create_picon_links.py  create_picon_providers.py  create_picon_sats.py  enigma2.sh.in  genmetaindex.py  svg2skin.py
(+358 files in other folders)
