installdir = $(pkgdatadir)/countries

dist_install_DATA = \
	ad.png \
	ae.png \
	ae2.png \
	bg.png \
	br.png \
	cn.png \
	cz.png \
	de.png \
	dk.png \
	en.png \
	es.png \
	ee.png \
	fi.png \
	fr.png \
	gl_ES.png \
	gr.png \
	hk.png \
	hr.png \
	hu.png \
	id.png \
	ir.png \
	is.png \
	it.png \
	ku.png \
	lt.png \
	lv.png \
	missing.png \
	mk.png \
	nl.png \
	no.png \
	pl.png \
	pt.png \
	ro.png \
	ru.png \
	se.png \
	si.png \
	sk.png \
	th.png \
	tr.png \
	ua.png \
	vn.png \
	fy_NL.png \
	yu.png \
	af.png \
	ag.png \
	ai.png \
	al.png \
	am.png \
	ao.png \
	ar.png \
	ar_AE.png \
	at.png \
	au.png \
	aw.png \
	ax.png \
	az.png \
	ba.png \
	bb.png \
	bd.png \
	be.png \
	bf.png \
	bg_BG.png \
	bh.png \
	bi.png \
	bj.png \
	bn.png \
	bo.png \
	bs.png \
	bt.png \
	bw.png \
	by.png \
	bz.png \
	ca.png \
	ca_AD.png \
	cd.png \
	cf.png \
	cg.png \
	ch.png \
	ci.png \
	cl.png \
	cm.png \
	co.png \
	cr.png \
	cs_CZ.png \
	cu.png \
	cv.png \
	cy.png \
	da_DK.png \
	de_DE.png \
	dj.png \
	dm.png \
	do.png \
	dz.png \
	ec.png \
	eg.png \
	eh.png \
	el_GR.png \
	en_AU.png \
	en_GB.png \
	en_US.png \
	er.png \
	es_ES.png \
	es-ga.png \
	et.png \
	et_EE.png \
	fa_IR.png \
	fi_FI.png \
	fj.png \
	fm.png \
	fr_FR.png \
	ga.png \
	gb.png \
	gb.png \
	gd.png \
	ge.png \
	gh.png \
	gm.png \
	gn.png \
	gq.png \
	gt.png \
	gw.png \
	gy.png \
	hn.png \
	hr_HR.png \
	ht.png \
	hu_HU.png \
	id_ID.png \
	ie.png \
	in.png \
	iq.png \
	is_IS.png \
	it_IT.png \
	jm.png \
	jo.png \
	jp.png \
	ke.png \
	kg.png \
	kh.png \
	ki.png \
	km.png \
	kn.png \
	kp.png \
	kr.png \
	ks.png \
	ku_KU.png \
	kw.png \
	kz.png \
	la.png \
	lb.png \
	lc.png \
	li.png \
	lk.png \
	lr.png \
	ls.png \
	lt_LT.png \
	lu.png \
	lv_LV.png \
	ly.png \
	ma.png \
	mc.png \
	md.png \
	ma.png \
	mg.png \
	mh.png \
	ml.png \
	mm.png \
	mn.png \
	mq.png \
	mr.png \
	mt.png \
	mu.png \
	mv.png \
	mw.png \
	mx.png \
	my.png \
	mz.png \
	na.png \
	nb_NO.png \
	ne.png \
	ng.png \
	ni.png \
	nl_NL.png \
	no_NO.png \
	np.png \
	nr.png \
	nz.png \
	om.png \
	pa.png \
	pe.png \
	pg.png \
	ph.png \
	pk.png \
	pl_PL.png \
	pr.png \
	pt_BR.png \
	pt_PT.png \
	pw.png \
	py.png \
	qa.png \
	ro_RO.png \
	rs.png \
	ru_RU.png \
	rw.png \
	sa.png \
	sb.png \
	sc.png \
	sd.png \
	sg.png \
	sk_SK.png \
	sl.png \
	sl_SI.png \
	sm.png \
	sn.png \
	so.png \
	sr.png \
	sr_YU.png \
	ss.png \
	st.png \
	sv.png \
	sv_SE.png \
	sx.png \
	sy.png \
	sz.png \
	td.png \
	tg.png \
	th_TH.png \
	tj.png \
	tl.png \
	tm.png \
	tn.png \
	to.png \
	tr_TR.png \
	tt.png \
	tv.png \
	tw.png \
	tz.png \
	ug.png \
	uk_UA.png \
	us.png \
	uy.png \
	uz.png \
	va.png \
	vc.png \
	va.png \
	vi.png \
	vi_VN.png \
	vu.png \
	ws.png \
	ya.png \
	za.png \
	zh_CN.png \
	zh_HK.png \
	zm.png \
	zw.png
	
