SUBDIRS = display

if HAVE_COLORLCD1
SUBDIRS += display128
endif

if HAVE_COLORLCD2
SUBDIRS += display96
endif

if HAVE_COLORLCD220
SUBDIRS += display220
endif

if HAVE_COLORLCD240
SUBDIRS += display240
endif

if HAVE_COLORLCD3
SUBDIRS += display128dm
endif

if HAVE_COLORLCD390
SUBDIRS += display390
endif

if HAVE_COLORLCD400
SUBDIRS += display400
endif

if HAVE_COLORLCD480
SUBDIRS += display480
endif

if HAVE_COLORLCD720
SUBDIRS += display720
endif

if HAVE_COLORLCD800
SUBDIRS += display800
endif

if HAVE_GRAUTEC70X0
SUBDIRS += grautec70x0
endif

if HAVE_GRAUTEC8000
SUBDIRS += grautec8000
endif

if HAVE_TEXTLCD
SUBDIRS += displaytext
endif
