installdir = $(pkgdatadir)/display/skin_default

dist_install_DATA = backward.png crypt.png dolby.png format.png forward.png hd.png pause.png play.png rec.png slow.png stop.png tuner-a.png tuner-a-act.png tuner-b.png tuner-b-act.png tuner-c.png tuner-c-act.png tuner-d.png tuner-d-act.png txt.png update_stable.png update_unstable.png skin_display.xml skin_display_picon.xml piconprev.png prev.png
