installdir = $(pkgdatadir)/display/skin_default

dist_install_DATA = 1080.png 169.png 2160.png 4.3.png 480.png 576.png 720.png analogclock.png backward.png dolbydigital.png dolbyprologic.png forward.png pause.png play.png record.png recording.png slow.png stop.png verdana.ttf skin_display.xml skin_display_picon.xml skin_display_templates.xml piconprev.png prev.png
