SUBDIRS = fonts

installdir = $(pkgdatadir)/display/skin_default

dist_install_DATA = skin_display_grautec.xml cb_off.png cb_on.png dummy.png icon_dreamnetcast.png icon_dvdplayer.png icon_jukebox.png icon_merlinmp3.png icon_movieplayer.png icon_picplayer.png icon_standby.png icon_standby1.png progress-lcd1.png progress-lcd2.png
