installdir = $(pkglibdir)/python/Components/Renderer

install_PYTHON = \
	__init__.py Label.py Progress.py Listbox.py Renderer.py Pixmap.py \
	FixedLabel.py PositionGauge.py Canvas.py CiModuleControl.py Picon.py Pig.py \
	FrontpanelLed.py ChannelNumber.py VideoSize.py NextEpgInfo.py GaugeRender.py \
	AnalogClockLCD.py AudioIcon.py Bhclock.py Cover.py EmptyEpg.py LcdPicon.py \
	NextEvents.py PicCript.py PicEmu2.py PiconUni.py RollerCharLCD.py \
	RollerCharLCDLong.py RunningText.py VolumeText.py VRunningText.py VWatches.py
